@@ -6,6 +6,7 @@ CHANGELOG Roundcube Webmail
 - Fix possible IMAP command injection and type juggling vulnerabilities (#6229)
 - Enigma: Fix key selection for signing
 - Fix check_request() bypass in places using get_uids() [CVE-2018-9846] (#6238)
+- Fix bug where usernames without domain part could be malformed or converted to lower-case on logon (#6224)
 
 RELEASE 1.3.5
 -------------
